Improved Store align; Fixed legibility of letter of the cards;

--- a/store/custom.css
+++ b/store/custom.css
@@ -25,10 +25,14 @@ body {
 .product-list {
 	margin-top: 20px;
 	display: flex;
-	flex-wrap: wrap;
 	justify-content: center;
+	flex-wrap: wrap;
 	gap: 15px;
+	max-width: 1000px;
+	margin-left: auto;
+	margin-right: auto;
 }
+
 
 .product-card {
 	background-color: #f0f0f0;
